# real_ai_bankend

./: .env.example  .gitignore  Dockerfile  README.md  mic_listener.py  pyproject.toml  requirements.txt  run.py  run_mcp_server.py
app/: __init__.py  main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: chat.py  files.py  models.py  speech.py
app/core/: config.py
app/schemas/: __init__.py  chat.py  file.py  model.py  speech.py
app/services/: chat_service.py  model_service.py  speech_service.py
mcp_center/: README.md  __init__.py  config.py  registry.py  server.py
mcp_center/services/: __init__.py  example_service.py
